# openidvp

./: .gitignore  COMPLIANCE_MAP.md  Cargo.toml  PACKAGING.md  README.md  THREAT_MODEL.md  buf.gen.yaml  buf.yaml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  conformance.yml
conformance/: Cargo.toml  README.md  oidf-verifier-plan.toml  oidf-wallet-plan.toml
conformance/eudi/: exclusions.json  fixture-inventory.json  test-cases.json  upstream-tests.json
conformance/fixtures/dc-api/: openid4vp-browser-request.json
conformance/fixtures/eudi/: cross-device-presentation.json  negative-nonce-mismatch.json  reference-verifier-wallet.json  same-device-presentation.json
conformance/fixtures/ewc/: dc-api-wallet-flow.json  eudi-wallet-rfcs-presentation.json
conformance/fixtures/mdoc/: annex-b-handover.json
conformance/oidf/: exclusions.json  modules.json  plans.json
conformance/oidf/configs/: vp-wallet-test-config-dcql-sdjwt-haip.json
conformance/reports/: agents-style-audit.json  eudi-interoperability.json  identity-sdk-migration.json  oidf-manifest.json  oidf-verifier.json  oidf-wallet.json  openid4vp-base.json  openid4vp-eudi.json  openid4vp-haip.json
conformance/reports/oidf/: oid4vp-1final-wallet-test-plan.json
conformance/requirements/: eudi-presentation.json  haip-presentation.json  openid4vp.json
conformance/scripts/: assert_oidf_results.sh  discover_oidf_openid4vp.py  drive_oidf_verifier_flow.py  drive_oidf_wallet_flow.py  preflight_oidf_verifier.sh  run_oidf_verifier_plan.sh  run_oidf_wallet_plan.sh  summarize_conformance_result.py
conformance/src/: error.rs  lib.rs  parse.rs  run.rs  strict_json.rs  vector.rs
conformance/tests/: manifest_tests.rs  property_tests.rs  vectors_tests.rs
conformance/vectors/: openid4vp-malicious-json.json
crates/dc-api/: Cargo.toml  NOTICE  README.md
crates/dc-api/src/: error.rs  lib.rs  mdoc.rs  request.rs  response.rs
crates/dcql/: Cargo.toml  NOTICE  README.md
crates/dcql/src/: error.rs  evaluate.rs  lib.rs  model.rs  path.rs  validate.rs  zeroize_json.rs
crates/formats/: Cargo.toml  README.md
crates/formats/src/: lib.rs  mdoc.rs  prove_zk_presentation.rs  report_zk_error.rs
crates/http/: Cargo.toml  README.md
crates/http/src/: build_request_uri_http_request.rs  error.rs  lib.rs  resolve_request_uri.rs
crates/profiles/: Cargo.toml  README.md
crates/profiles/src/: describe_haip.rs  lib.rs
crates/proto/codec/: Cargo.toml  README.md
crates/proto/codec/src/: convert.rs  encode_message.rs  lib.rs  map_authorization_request_transport.rs  map_authorization_response.rs  map_client_identifier.rs  map_dc_api.rs  map_metadata.rs  map_problem_details.rs  map_session_binding.rs  report_proto_error.rs
crates/proto/codec/tests/: verify_codec.rs
crates/proto/openid4vp/: Cargo.toml  README.md
crates/proto/openid4vp/src/: generated.rs  lib.rs
crates/proto/openid4vp/tests/: generated_connect_tests.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: build_authorization_request_launch_response.rs  build_connect_router.rs  build_direct_post_success_response.rs  build_problem_response.rs  build_verifier_service.rs  compare_secret.rs  consume_verifier_session.rs  decrypt_authorization_response_jwt.rs  decrypt_authorization_response_with_jose.rs  define_http_message.rs  handle_authorization_error_response.rs  handle_authorization_request_launch.rs  handle_direct_post.rs  handle_direct_post_jwt.rs  implement_dc_api_connect.rs  implement_verifier_connect.rs  lib.rs  load_request_object.rs  map_runtime_problem.rs  parse_form_urlencoded.rs  prepare_authorization_request_launch.rs  read_runtime_clock.rs  report_runtime_error.rs  route_verifier_http.rs  serve_request_object.rs  serve_verifier_connect.rs  validate_authorization_response.rs  verify_runtime.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: classify_request_object_jwt.rs  client_id.rs  define_media_types.rs  define_metadata.rs  error.rs  lib.rs  problem_details.rs  request.rs  response.rs  transaction_data.rs
crates/verifier/: Cargo.toml  README.md
crates/verifier/src/: binding.rs  enforce_zk_policy.rs  error.rs  holder_binding.rs  jar.rs  lib.rs  request_object.rs  response.rs  session.rs  verify_holder_binding.rs
crates/wallet/: Cargo.toml  README.md
crates/wallet/src/: derive_zk_presentation.rs  error.rs  jar.rs  lib.rs  metadata_reference.rs  prepare_consent_data.rs  transport.rs  validate_endpoint_binding.rs  verifier_attestation.rs  verify_nested_request_object_with_jose.rs  verify_signed_request_object_with_jose.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: authorization_request_proto.rs  authorization_request_transport.rs  authorization_response_json.rs  authorization_response_proto.rs  client_identifier.rs  dc_api_request_json.rs  dc_api_response_json.rs  dcql_evaluation.rs  dcql_json.rs  direct_post_form.rs  direct_post_jwt_form.rs  metadata_json.rs  request_object_jwt.rs  transaction_data_json.rs  verifier_attestation_parameters.rs
protos/openid4vp/v1/: openid4vp.proto
scripts/: check-release-readiness.mjs  check-rust-packaging.sh  publish-crates-in-order.mjs  run-fuzz-smoke.sh
src/: configure_policy.rs  lib.rs
tests/: verify_sdk_facade.rs
