# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openidvp-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
buffa = { version = "0.8.1", features = ["json"] }
libfuzzer-sys = "0.4"
reallyme-openid4vp-dcql = { path = "../crates/dcql", default-features = false }
reallyme-openid4vp-dc-api = { path = "../crates/dc-api", default-features = false }
reallyme-openid4vp-proto = { path = "../crates/proto/openid4vp", default-features = false, features = ["generated"] }
reallyme-openid4vp-proto-codec = { path = "../crates/proto/codec", default-features = false }
reallyme-crypto = { version = "0.1.6", default-features = false, features = ["native"] }
reallyme-jose = { path = "../../identity/crates/jose", default-features = false, features = ["jose-crypto"] }
reallyme-openid4vp-runtime = { path = "../crates/runtime", default-features = false, features = ["jose"] }
reallyme-openid4vp-types = { path = "../crates/types", default-features = false }
reallyme-openid4vp-verifier = { path = "../crates/verifier", default-features = false }
reallyme-openid4vp-wallet = { path = "../crates/wallet", default-features = false }
serde_json = "1.0"

[[bin]]
name = "dcql_json"
path = "fuzz_targets/dcql_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "authorization_request_transport"
path = "fuzz_targets/authorization_request_transport.rs"
test = false
doc = false
bench = false

[[bin]]
name = "request_object_jwt"
path = "fuzz_targets/request_object_jwt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "client_identifier"
path = "fuzz_targets/client_identifier.rs"
test = false
doc = false
bench = false

[[bin]]
name = "authorization_response_json"
path = "fuzz_targets/authorization_response_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "authorization_response_proto"
path = "fuzz_targets/authorization_response_proto.rs"
test = false
doc = false
bench = false

[[bin]]
name = "authorization_request_proto"
path = "fuzz_targets/authorization_request_proto.rs"
test = false
doc = false
bench = false

[[bin]]
name = "metadata_json"
path = "fuzz_targets/metadata_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "transaction_data_json"
path = "fuzz_targets/transaction_data_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dc_api_response_json"
path = "fuzz_targets/dc_api_response_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dcql_evaluation"
path = "fuzz_targets/dcql_evaluation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "direct_post_form"
path = "fuzz_targets/direct_post_form.rs"
test = false
doc = false
bench = false

[[bin]]
name = "direct_post_jwt_form"
path = "fuzz_targets/direct_post_jwt_form.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dc_api_request_json"
path = "fuzz_targets/dc_api_request_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "verifier_attestation_parameters"
path = "fuzz_targets/verifier_attestation_parameters.rs"
test = false
doc = false
bench = false
