# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-openid4vp-dcql"
version = "0.1.0"
description = "Digital Credentials Query Language model and evaluation engine."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = true
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
