# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-openid4vp-formats"
version = "0.1.0"
description = "Format-specific OpenID4VP presentation glue."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[features]
default = ["native"]
native = ["envelopes-mdoc/native"]
wasm = ["envelopes-mdoc/wasm"]

[dependencies]
envelopes-mdoc = { path = "../../../identity/crates/envelopes/mdoc", version = "0.1.0", default-features = false }
reallyme-openid4vp-dcql = { path = "../dcql", version = "0.1.0" }
reallyme-openid4vp-types = { path = "../types", version = "0.1.0", default-features = false }
reallyme-zk-api = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
