# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-openid4vp-http"
version = "0.1.0"
description = "Optional OpenID4VP HTTP transport adapter traits."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[dependencies]
reallyme-openid4vp-types = { path = "../types", version = "0.1.0", default-features = false }
reallyme-openid4vp-wallet = { path = "../wallet", version = "0.1.0", default-features = false }
thiserror = { workspace = true }

[lints]
workspace = true
