# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-openid4vp-profiles"
version = "0.1.0"
description = "OpenID4VP presentation profiles."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[dependencies]
reallyme-openid4vp-dcql = { path = "../dcql", version = "0.1.0" }
reallyme-openid4vp-types = { path = "../types", version = "0.1.0", default-features = false }
reallyme-profiles = { workspace = true }

[lints]
workspace = true
