# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-openid4vp-runtime"
version = "0.1.0"
description = "Runtime Connect and HTTP service adapters for ReallyMe OpenID4VP."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[features]
default = ["native", "jose"]
native = ["connectrpc/server", "reallyme-jose?/native"]
wasm = ["reallyme-jose?/wasm"]
jose = ["dep:reallyme-jose", "reallyme-jose/jose-crypto"]

[dependencies]
buffa = { workspace = true }
connectrpc = { workspace = true }
reallyme-openid4vp-dc-api = { path = "../dc-api", version = "0.1.0", default-features = false }
reallyme-openid4vp-proto = { path = "../proto/openid4vp", version = "0.1.0", default-features = false, features = ["generated", "connect"] }
reallyme-openid4vp-proto-codec = { path = "../proto/codec", version = "0.1.0", default-features = false }
reallyme-openid4vp-types = { path = "../types", version = "0.1.0", default-features = false }
reallyme-openid4vp-verifier = { path = "../verifier", version = "0.1.0", default-features = false }
reallyme-codec = { workspace = true, features = ["base64url"] }
reallyme-jose = { workspace = true, optional = true }
reallyme-zk-api = { workspace = true }
serde_json = { workspace = true }
subtle = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
bytes = "1.12"
reallyme-crypto = { workspace = true, features = ["aes", "p256"] }
reallyme-openid4vp-dcql = { path = "../dcql", version = "0.1.0", default-features = false }

[lints]
workspace = true
