# SPDX-FileCopyrightText: Copyright © 2026 ReallyMe LLC. All rights reserved
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "reallyme-openid4vp-types"
version = "0.1.0"
description = "OpenID4VP authorization request, response, metadata, and transaction data types."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
include = ["/src/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE", "/NOTICE"]

[features]
default = []
native = []
wasm = []

[dependencies]
reallyme-openid4vp-dcql = { path = "../dcql", version = "0.1.0" }
reallyme-codec = { workspace = true, features = ["base64url"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[lints]
workspace = true
